prow/base/horologium.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horologium
  labels:
    app: horologium
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: horologium
  template:
    metadata:
      labels:
        app: horologium
    spec:
      serviceAccountName: "horologium"
      terminationGracePeriodSeconds: 30
      containers:
        - name: horologium
          image: horologium:latest
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "2m"
            limits:
              memory: "64Mi"
              cpu: "2m"
      volumes:
        - name: config
          configMap:
            name: config
