prow/base/prow-controller-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prow-controller-manager
  labels:
    app: prow-controller-manager
spec:
  replicas: 0 # see https://github.com/kubernetes/test-infra/blob/5a6105dcfb5b102d8102f072a8b06f067241a91f/prow/cmd/prow-controller-manager/README.md#exclusion-with-other-components
  selector:
    matchLabels:
      app: prow-controller-manager
  template:
    metadata:
      labels:
        app: prow-controller-manager
    spec:
      serviceAccountName: prow-controller-manager
      containers:
        - name: prow-controller-manager
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
            - --github-token-path=/etc/github/token
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            - --enable-controller=plank
          image: prow-controller-manager
          volumeMounts:
            - name: github-token
              mountPath: /etc/github
              readOnly: true
            - name: config
              mountPath: /etc/config
              readOnly: true
      volumes:
        - name: github-token
          secret:
            secretName: github-token
        - name: config
          configMap:
            name: config
