prow/base/needs-rebase.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: needs-rebase
  labels:
    app: needs-rebase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: needs-rebase
  template:
    metadata:
      labels:
        app: needs-rebase
    spec:
      terminationGracePeriodSeconds: 180
      containers:
        - name: needs-rebase
          image: needs-rebase:latest
          args:
            - --dry-run=false
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: hmac
              mountPath: /etc/webhook
              readOnly: true
            - name: oauth
              mountPath: /etc/github
              readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
      volumes:
        - name: hmac
          secret:
            secretName: hmac-token
        - name: oauth
          secret:
            secretName: oauth-token
        - name: plugins
          configMap:
            name: plugins
---
apiVersion: v1
kind: Service
metadata:
  name: needs-rebase
spec:
  selector:
    app: needs-rebase
  ports:
    - port: 80
      targetPort: 8888
  type: NodePort
