prow/base/tide.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tide
  labels:
    app: tide
spec:
  replicas: 1 # Do not scale up.
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tide
  template:
    metadata:
      labels:
        app: tide
    spec:
      serviceAccountName: "tide"
      containers:
        - name: tide
          image: tide:latest
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
            - --github-token-path=/etc/github/oauth
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            - --github-graphql-endpoint=http://ghproxy/graphql
            - --s3-credentials-file=/etc/s3-credentials/service-account.json
            - --status-path=s3://thoth/tide/tide-status
            - --history-uri=s3://thoth/tide/tide-history.json
          ports:
            - name: main
              containerPort: 8888
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: oauth-token
              mountPath: /etc/github
              readOnly: true
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: s3-credentials
              mountPath: /etc/s3-credentials
              readOnly: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "250m"
      volumes:
        - name: oauth-token
          secret:
            secretName: oauth-token
        - name: config
          configMap:
            name: config
        - name: s3-credentials
          secret:
            secretName: s3-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: tide
spec:
  selector:
    app: tide
  ports:
    - name: main
      port: 80
      targetPort: 8888
      protocol: TCP
    - name: metrics
      port: 9090
      protocol: TCP
  type: ClusterIP
