prow/base/routes.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    k8s-app: hook
  name: hook
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hook
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    k8s-app: deck
  name: deck
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: deck
    weight: 100
  wildcardPolicy: None
